# CellularAutomata

./: .gitignore  CellularAutomata.cabal  README.md  cabal.project.local
app/GOL/: Main.hs
app/seeds/: Main.hs
src/: Main.hs
src/Automata/: Elementary.hs  GOL.hs  Seeds.hs
src/Render/: ASCII.hs  ASCII2D.hs
