cabal-version:       2.4
name:                CellularAutomata
version:             0.1.0.0
build-type:          Simple

executable CellularAutomata
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
      Automata.Seeds
      Render.ASCII2D
  build-depends:
      base >=4.16 && <5,
      containers
  default-language: Haskell2010
